<resources>
    <string name="app_name">Zombie</string>
    <string name="intro">Welcome to the World of Zombie Survival RPG.\n
    It\'s Like Pokemon Go, but Zombies!</string>
    <string name="goHome">Please Get to the Place You Rest Your Head Before Continue</string>
    <string name="gps">We Need To Set Your GPS Location to Prepare Your Home Base</string>
    <string name="gettingGPS">Getting GPS Coordinates</string>
    <string name="oneYear">It Is Currently One Year After the First Signs of The Zombie Apocalypse. You have survived,
        just scrapping by</string>
    <string name="home">You have just arrived in a new town, setting up shelter in a bombed out house. It feels oddly familiar. You wish you could remember why.</string>
    <string name="continueButton">Select the Continue Button Below when You Are Ready To Establish Home Base.</string>
    <string name="staticLong">-86.72221560000003</string>
    <string name="staticLat">33.5376098</string>
    <string name="latHere">Lat Goes Here</string>
    <string name="longHere">Long goes Here</string>
    <string name="homeIntro">Press the Button To Get the Coordinates</string>
    <string name="homeEstablished">Your home base is now secured. You now have a place to settle down in this area.</string>
    <string name="leaveText">Click the Leave Home button to continute out into the world</string>
</resources>
