<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_zombie"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="downwardspiral.zombie.views.zombieActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:text="@string/intro"
        android:id="@+id/intro"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/goHome"
        android:textColor="#FFFFFF"
        android:id="@+id/goHome"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/intro"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/gps"
        android:textColor="#FFFFFF"
        android:id="@+id/gps"
        android:layout_below="@+id/goHome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/oneYear"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/gps"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp"
        android:id="@+id/oneYear" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/home"
        android:textColor="#FFFFFF"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/oneYear"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/home" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/continueButton"
        android:textColor="#FFFFFF"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/home"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/continueText" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="17dp"
        android:id="@+id/linearLayout" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Continue"
        android:id="@+id/continueButton"
        tools:ignore="HardcodedText"
        android:layout_below="@+id/continueText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:id="@+id/location"
        android:layout_alignTop="@+id/linearLayout"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
